# ashnotes-app

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  package-lock.json  package.json  public.key
.docker/: Dockerfile  README.md
.github/workflows/: docker.yml  publish_apt_repo.yml  release.yml
backend/: Cargo.toml  Makefile  README.md  build-frontend.sh
backend/desktop-app/: Cargo.toml  README.md  build-frontend.sh  tauri.conf.json
backend/desktop-app/icons/: icon.icns
backend/desktop-app/src/: commands.rs  main.rs  state.rs  tray.rs
backend/desktop-app/systemd/: ashnotes.service  postinst.sh  prerm.sh
backend/services/: Cargo.toml
backend/services/src/: github_service.rs  lib.rs  note_service.rs
backend/src/: main.rs
backend/web-app/: Cargo.toml  README.md
backend/web-app/src/: api.rs  assets.rs  main.rs
dists/stable/: InRelease  Release  Release.gpg
dists/stable/main/binary-amd64/: Packages
docs/: README.md  architecture.md  deployment.md
frontend/: README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
frontend/.svelte-kit/: ambient.d.ts
frontend/.svelte-kit/output/client/.vite/: manifest.json
frontend/.svelte-kit/output/client/_app/: version.json
frontend/.svelte-kit/output/client/_app/immutable/assets/: 0.BePb-Tdd.css  _page.CJyKj-Y1.css
frontend/.svelte-kit/output/client/_app/immutable/chunks/: BM7KANXt.js  CxqE7Zb0.js  D7ZDF7IB.js  DNNZQTWB.js  DYa25zTU.js  D_uOQWZ4.js
frontend/.svelte-kit/output/client/_app/immutable/entry/: app.BLd0VkYj.js  start.B2x-VLk6.js
frontend/.svelte-kit/output/client/_app/immutable/nodes/: 0.Dp1fxeuC.js  1.DSomwpOJ.js  2.BKEt5ate.js  3.CcJENCtj.js
frontend/.svelte-kit/output/server/: manifest-full.js  manifest.js
frontend/.svelte-kit/output/server/.vite/: manifest.json
frontend/.svelte-kit/output/server/_app/immutable/assets/: NoteEditor.BgF6m8xR.css  _layout.QOc2bmpX.css
frontend/.svelte-kit/output/server/chunks/: Icon.js  NoteEditor.js  client.js  index.js  index2.js  internal.js
frontend/.svelte-kit/output/server/entries/fallbacks/: error.svelte.js
frontend/.svelte-kit/output/server/entries/pages/: _layout.svelte.js  _page.svelte.js
frontend/.svelte-kit/output/server/entries/pages/notes/_...path_/: _page.svelte.js
frontend/.svelte-kit/output/server/nodes/: 0.js  1.js  2.js  3.js
frontend/.svelte-kit/types/: route_meta_data.json
frontend/.svelte-kit/types/src/routes/: $types.d.ts
frontend/.svelte-kit/types/src/routes/notes/[...path]/: $types.d.ts
frontend/src/lib/: DebugPanel.svelte  DeletionProgress.svelte  Icon.svelte  NoteEditor.svelte  NoteTree.svelte  NoteTreeItem.svelte  Settings.svelte  api.ts  logStore.ts  noteStore.ts  settingsStore.ts  themeStore.ts
frontend/src/routes/: +layout.svelte  +page.svelte
frontend/src/routes/notes/[...path]/: +page.svelte
src/: github_service.rs  main.rs
