[package]
name = "note_app_backend"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.38" # A fantastic, typed GitHub API client
dotenvy = "0.15"  # For managing environment variables
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-login = "0.13" 
