[package]
name = "ashnotes"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
octocrab = "0.44"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
axum-login = "0.17" 
async-recursion = "1.1.1"
futures = "0.3.31"
anyhow = "1.0.98"
thiserror = "2.0.12"
tower-http = { version = "0.6", features = ["cors"] }

rust-embed = "8.3"
mime_guess = "2.0.4"