[package]
name = "desktop-app"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
services = { path = "../services" }
tauri = { version = "2.0.0-beta.21", features = [] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] } 

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }
