[package]
name = "desktop-app"
version = "0.1.2"
edition = "2024"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
services = { path = "../services" }
tauri = { version = "2.0.0-beta.21", features = [] }
dotenvy = "0.15"
tokio = { version = "1", features = ["full"] }

log = "0.4"
tauri-plugin-log = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "v2" }
anyhow = "1"
thiserror = "1"

[build-dependencies]
tauri-build = { version = "2.0.0-beta.16", features = [] }
