[package]
name = "services"
version = "25.7.0"
edition = "2021"

[dependencies]
github-service = { git = "https://github.com/AABelkhiria/github-service-rs.git", branch = "main" }
serde = { version = "1", features = ["derive"] }
octocrab = "0.44"
async-recursion = "1.1"
futures = "0.3"
anyhow = "1"
thiserror = "2.0"
