[package]
name = "web-app"
version = "1.0.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8.7"
mime_guess = "2"
services = { path = "../services" }
dotenvy = "0.15"
